# elfshoe

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  404.html  99-dnsmasq-pxe-ipxe.conf  ADDING_DISTRIBUTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OVERVIEW.md  PROJECT_STATUS.md  QUICKREF.md  README.md  TESTING.md  config.example.yaml  config.yaml  index.html  menu.ipxe  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  publish-to-pypi.yml  release.yml
developer/adding_distributions/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/pre-commit/: index.html
developer/project_status/: index.html
developer/testing/: index.html
docs/: getting-started.md  index.md  reference.md  server-setup.md
docs/developer/: adding_distributions.md  architecture.md  pre-commit.md  project_status.md  testing.md
docs/examples/: config.yaml
examples/: 99-dnsmasq-pxe-ipxe.conf  config.yaml
getting-started/: index.html
overrides/: main.html
reference/: index.html
search/: search_index.json
server-setup/: index.html
src/: ipxe_menu_gen.py
src/elfshoe/: __init__.py  __main__.py  builder.py  cli.py  ipxelint.py  validator.py
src/elfshoe/core/: __init__.py  generator.py  models.py  validator.py
src/elfshoe/distributions/: __init__.py  base.py  fedora.py
src/elfshoe/templates/: distribution_submenus.ipxe.j2
src/ipxe_menu_gen/core/: models.py  validator.py
src/ipxe_menu_gen/distributions/: base.py  fedora.py
src/templates/: additional_items.ipxe.j2  distribution_submenus.ipxe.j2  main_menu.ipxe.j2
tests/: README.md  conftest.py  test_builder.py  test_cli.py  test_core_url_validator.py  test_fedora.py  test_generator.py  test_ipxe_menu_gen.py  test_ipxe_validator.py  test_ipxelint.py  test_menu_generator.py  test_models.py  test_url_validator.py  test_validator.py
