[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipxe-menu-generator"
version = "2.0.0"
description = "A configurable iPXE boot menu generator with automatic version detection and URL validation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "iPXE Menu Generator Contributors"}
]
keywords = ["ipxe", "pxe", "boot", "menu", "network-boot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Boot",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
ipxe-menu-gen = "ipxe_menu_gen:main"

[project.urls]
Homepage = "https://github.com/yourusername/ipxe-menu-generator"
Documentation = "https://github.com/yourusername/ipxe-menu-generator/blob/main/README.md"
Repository = "https://github.com/yourusername/ipxe-menu-generator"
Issues = "https://github.com/yourusername/ipxe-menu-generator/issues"

[tool.setuptools]
packages = ["ipxe_menu_gen"]

[tool.setuptools.package-data]
ipxe_menu_gen = ["templates/*.j2"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
target-version = "py37"
select = ["E", "F", "W", "I", "N", "UP"]
