[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipxe-menu-generator"
version = "2.0.0"
description = "A configurable iPXE boot menu generator with automatic version detection and URL validation"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "iPXE Menu Generator Contributors"}
]
keywords = ["ipxe", "pxe", "boot", "menu", "network-boot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Boot",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
ipxe-menu-gen = "ipxe_menu_gen.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ipxe-menu-generator"
Documentation = "https://github.com/yourusername/ipxe-menu-generator/blob/main/README.md"
Repository = "https://github.com/yourusername/ipxe-menu-generator"
Issues = "https://github.com/yourusername/ipxe-menu-generator/issues"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/ipxe_menu_gen"]

# Hatch environments
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/}"
test-cov = "pytest --cov=src --cov-report=html --cov-report=term {args:tests/}"
validate = "python -m ipxe_menu_gen"
fast = "python -m ipxe_menu_gen --no-validate --quiet"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.hatch.envs.lint.scripts]
check = [
    "ruff check src tests",
    "black --check src tests",
]
format = [
    "black src tests",
    "ruff check --fix src tests",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]  # Tell pytest where to find the package
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py37']

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

