[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elfshoe"
dynamic = ["version"]
description = "Automated, validated, multi-architecture iPXE boot menu generation - where elves craft your network boot menus"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "elfshoe Contributors" }]
keywords = ["ipxe", "pxe", "boot", "menu", "network-boot", "elfshoe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Boot",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["pyyaml>=6.0", "jinja2>=3.0"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10",
    "black>=26.1.0",
    "ruff>=0.1.0",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymarkdownlnt>=0.9.0",
]

[project.scripts]
elfshoe = "elfshoe.cli:main"
ipxelint = "elfshoe.ipxelint:main"

[project.urls]
Homepage = "https://github.com/timhughes/elfshoe"
Documentation = "https://timhughes.github.io/elfshoe/"
Repository = "https://github.com/timhughes/elfshoe"
Issues = "https://github.com/timhughes/elfshoe/issues"

# Hatch build configuration
[tool.hatch.version]
path = "src/elfshoe/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/elfshoe"]

# Hatch environments
[tool.hatch.envs.default]
dependencies = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-mock>=3.10"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/}"
test-cov = "pytest --cov=src --cov-report=html --cov-report=term {args:tests/}"
validate = "python -m elfshoe"
fast = "python -m elfshoe --no-validate --quiet"

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.0", "ruff>=0.1.0"]

[tool.hatch.envs.lint.scripts]
check = ["ruff check src tests", "black --check src tests"]
format = ["black src tests", "ruff check --fix src tests"]

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymarkdownlnt>=0.9.0",
]

[tool.hatch.envs.docs.scripts]
lint = "pymarkdownlnt -c .pymarkdown.json scan docs/ || true"
build = "pymarkdownlnt -c .pymarkdown.json scan docs/ || true && mkdocs build --clean"
serve = "mkdocs serve --dev-addr localhost:8000"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]                # Tell pytest where to find the package
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py37']

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["elfshoe"]
